--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 
 
                 <div class="bio">
-                    <h3>Let's have fun coding!</h3>
+                    <h3>Let's have fun developing!</h3>
                     <p>
                         Lorem ipsum dolor amet chia keytar tumeric cred af tattooed. Drinking vinegar tbh echo park four
                         loko, literally green juice skateboard whatever vaporware. Flannel selvage trust fund, craft
